--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     plan: free
-    name: Digital-test
+    name: metadatax
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python3 bot.py
